# restcountries_cli

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: linters.yml  publish.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/intro/: installation.rst  overview.rst  tutorial.rst
restcountries_cli/: __init__.py  cli.py  constants.py  exceptions.py  factories.py  models.py
tests/: example_all.json  example_country.json  test_cli.py
